fix menu button flicker on load

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,3 @@ body {
 * {
   box-sizing: border-box;
 }
-
-#__next {
-  height: 100%;
-}
